added cart page and minor page restructuring

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-light navbar-expand-lg bg-light shadow-sm mb-3">
+  <nav class="navbar navbar-light navbar-expand-lg bg-light shadow-sm mb-3 sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="/"><img src="../../assets/images/logo.jpg" alt="INCREFF" height="40px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,15 +6,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow: 0;">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <a class="nav-link" routerLink="/upload">
-                <span class="material-symbols-outlined">
+                <a class="text-muted my-auto me-4" routerLink="/upload">
+                <span class="material-icons fs-2">
                     upload_file
                 </span>
             </a>
-          <a class="nav-link" routerLink="/cart">
-              <i class="material-icons">shopping_cart</i>
+          <a class="text-muted my-auto me-4 position-relative" routerLink="/cart">
+              <i class="material-icons fs-2">shopping_cart</i>
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill p-1 bg-red">
+                99
+              </span>
           </a>
-          <div class="dropdown">
+          
+          <div class="dropdown ms-2 my-auto">
             <button class="btn btn-light shadow-sm dropdown-toggle fw-bold text-muted" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               {{userName}}
             </button>
