--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,65 @@
-<p>cart works!</p>
+<div class="container-fluid px-4">
+    <div class="row">
+        <div class="col-12 col-lg-7">
+            <div class="row shadow-sm mb-2" *ngFor="let i of repeat">
+                <div class="col-12 col-sm-4 text-center"><img src="../../assets/images/mac1.jpg" alt="" height="220px">
+                </div>
+                <div class="col py-3">
+                    <h6 class="text-muted mb-0">Apple</h6>
+                    <h5 class="mb-0">Macbook Air</h5>
+                    <p class="mb-2 opacity-75">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, minus.
+                    </p>
+                    <h5 class="d-inlineBlock me-2 fw-normal">₹1,50,000.00</h5> 
+                    <small>
+                        <span class="text-muted text-decoration-line-through">₹1,67,000.00</span> 
+                        <span class="text-success ms-1">(15% Off)</span>
+                    </small>
+                    <div class="input-group mb-3">
+                        <button class="btn btn-outline-red border-end-0 px-2">
+                            <span class="material-symbols-outlined">
+                                remove
+                            </span>
+                        </button>
+                        <input type="text"
+                            class="form-control w-3rem flex-grow-0 text-center text-red border-start-0 border-red border-end-0 no-border-on-focus"
+                            value="2" placeholder="" aria-label="Example text with button addon"
+                            aria-describedby="button-addon1">
+                        <button class="btn btn-outline-red border-start-0 px-2">
+                            <span class="material-symbols-outlined">
+                                add
+                            </span>
+                        </button>
+                    </div>
+                    <h5 class="mb-0"><span class="fw-normal">Subtotal:</span> ₹3,00,000.00</h5>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-3 mt-4 mt-lg-0 offset-lg-2 px-0">
+            <div class="shadow-sm p-2 sticky-top" style="top:82px">
+                <h4 class="text-muted">Order Summary</h4>
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <div>Total Mrp</div>
+                    <div>₹1,67,000.00</div>
+                </div>
+                <div class="d-flex justify-content-between text-success">
+                    <div class="fw-bold">Discount</div>
+                    <div>-₹17,000.00</div>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div>Delivery Charges</div>
+                    <div>₹49</div>
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <div class="h5">Total Amount</div>
+                    <div class="h5">₹1,50,049.00</div>
+                </div>
+                <hr>
+                <p class="text-success">Youl'll save <strong>₹16,951.00</strong> on this order.</p>
+                <button class="btn btn-red w-100 text-center">Place Order</button>
+            </div>
+        </div>
+    </div>
+</div>
