--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="col-12 col-md-6 d-flex justify-content-around login-container">
-    <div class="card login-card my-auto h-fit">
+    <div class="card border-0 shadow-sm login-card my-auto h-fit">
         <form class="card-body mb-0">
         <h4 class="card-subtitle mb-4 text-muted">Login</h4>
         <div class="form-floating mb-3">
