--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,1 +1,45 @@
-<p>upload works!</p>
+<div class="row">
+<div class="card col col-md-5 col-lg-4 border-0 shadow-sm">
+    <div class="card-body">
+      <h3>Upload Orders</h3>
+      <div class="input-group mb-3 mt-3">
+        <input type="file" accept="text/csv" class="form-control no-border-on-focus" id="inputGroupFile01">
+      </div>
+      <div class="text-end">
+        <button class="btn btn-secondary">Preview</button>
+        <button class="btn btn-red ms-2">Upload</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-md-6 offset-0 offset-md-1 offset-lg-2 mt-4 mt-md-0">
+    <table class="table shadow-sm">
+        <thead class="">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+</div>
