product page refactoring

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,10 +22,9 @@
             <button class="btn btn-light shadow-sm dropdown-toggle fw-bold text-muted" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               {{userName}}
             </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" routerLink="/upload">Upload Orders</a></li>
+              <li><a class="dropdown-item" routerLink="/login">Login</a></li>
             </ul>
           </div>
         </ul>
