--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,19 +1,27 @@
-<!-- <div class="col-12 col-md-6 col-lg-4">
-    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
+<div class="row">
+<div class="col-12 col-md-6 col-lg-6">
+  <div class="row">
+  <div class="col-2">
+      <img class="img-fluid" src="../../assets/images/mac1.jpg" alt="">
+      <img class="img-fluid" src="../../assets/images/mac1.jpg" alt="">
+      <img class="img-fluid" src="../../assets/images/mac1.jpg" alt="">
+  </div>
+  <div class="col-8 col-md-10">
+    <div id="carouselExampleIndicators" class="carousel carousel-dark shadow-sm slide" data-bs-ride="carousel">
+        <!-- <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+        </div> -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../../assets/images/mac1.jpg" class="d-block w-100 img-fluid" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../../assets/images/mac1.jpg" class="d-block w-100 img-fluid" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../../assets/images/mac1.jpg" class="d-block w-100 img-fluid" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -25,5 +33,59 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-</div> -->
-<p>details works</p>
+    </div>
+</div>
+</div>
+
+<div class="col-10 col-md-5 col-lg-5 offset-1 offset-md-1 mt-4 mt-md-0">
+  <h5 class="text-muted mb-0">Apple</h5>
+  <h4 class="mb-1">Macbook Air</h4>
+  <p class="opacity-75 mb-2">Lorem ipsum dolor sit amet consectetur.</p>
+  <h4 class="d-inline-block me-2 mb-0">₹1,50,000.00</h4> <span><span
+    class="text-muted text-decoration-line-through">₹1,67,000.00</span> <span class="text-success ms-1">(15%
+    Off)</span></span>
+    <p class="text-success mb-3">inclusive of all taxes</p>
+    <button class="btn btn-red mb-4 d-none">Add to cart</button>
+    <div class="d-flex mb-4">
+    <div class="input-group w-fit">
+      <button class="btn btn-outline-red border-end-0 px-2">
+          <span class="material-symbols-outlined">
+              remove
+          </span>
+      </button>
+      <input type="text"
+          class="form-control w-3rem flex-grow-0 text-center text-red border-start-0 border-red border-end-0 no-border-on-focus"
+          value="2" placeholder="" aria-label="Example text with button addon"
+          aria-describedby="button-addon1">
+      <button class="btn btn-outline-red border-start-0 px-2">
+          <span class="material-symbols-outlined">
+              add
+          </span>
+      </button>
+  </div>
+  <button class="btn btn-red d-flex ms-3" routerLink="/cart">Go to cart <span class="material-symbols-outlined ms-2">
+    arrow_forward
+    </span></button>
+  </div>
+
+  <h5>Product Description</h5>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus facilis recusandae veniam! In provident magni omnis consequuntur debitis illo facilis perspiciatis accusamus sed dolores? Obcaecati vero doloremque ut explicabo repellendus.</p>
+
+  <h5>Delivery Options</h5>
+  <ul>
+    <li>100% Original Products</li>
+    <li>Pay on delivery might be available</li>
+    <li>Easy 14 days returns and exchanges</li> 
+    <li>Try & Buy might be available</li>
+  </ul>
+
+  <h5>Payment Options</h5>
+  <ul>
+    <li>5% Cashback on Flipkart Axis Bank Card</li>
+    <li>₹5,000 discount on HDFC credit and debit card emi txrn</li>
+    <li>₹5,000 discount on HDFC credit card txrn</li>
+    <li>Buy this product & Get upto ₹500 off on Furniture</li>
+  </ul>
+
+</div>
+</div>
