--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -48,7 +48,7 @@
       </div>
 
       <h6 class="text-muted text-uppercase mt-4">Brands</h6>
-      <div class="form-check" *ngFor="let i of repeat">
+      <div class="form-check" *ngFor="let i of products">
         <input class="form-check-input" type="checkbox" name="brand" value="apple">
         <label class="form-check-label" for="apple">
           Apple
@@ -72,19 +72,19 @@
         </div>
       </div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-0">
-        <div class="col" *ngFor="let i of repeat">
-          <div class="card border-0 shadow-sm position-relative product-card" routerLink="product/5">
+        <div class="col" *ngFor="let product of products">
+          <div class="card border-0 shadow-sm position-relative product-card" routerLink="product/{{product.id}}">
             <img class="img-fluid rounded img-thumbnail p-3 border-0" src="assets/images/mac1.jpg"
               alt="Image not Available">
-            <div class="rating position-absolute bg-light top-0 end-0 shadow-sm rounded-2 px-2 py-1 m-2">4.8 ⭐</div>
+            <div class="rating position-absolute bg-light top-0 end-0 shadow-sm rounded-2 px-2 py-1 m-2">{{product.rating}} ⭐</div>
             <div class="card-body">
-              <h5 class="card-title mb-1">Macbook Air</h5>
-              <p class="mb-1">Lorem ipsum dolor sit amet.</p>
-              <h5 class="d-inline-block me-2">₹1,50,000.00</h5> <small><span
-                  class="text-muted text-decoration-line-through">₹1,67,000.00</span> <span
-                  class="text-success ms-1">(15%
+              <h5 class="card-title mb-1">{{product.title}}</h5>
+              <p class="mb-1 text-muted opacity-75 one-liner">{{product.description}}</p>
+              <h5 class="d-inline-block me-2">₹{{product.price | number : '1.2-2'}}</h5> <small><span
+                  class="text-muted text-decoration-line-through">₹{{getMrp(product.price, product.discount) | number : '1.2-2'}}</span> <span
+                  class="text-success ms-1">({{product.discount}}%
                   Off)</span></small>
-              <button class="btn btn-sm btn-red ">Add to cart</button>
+              <button class="btn btn-sm btn-red">Add to cart</button>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
       </div>
 
       <h6 class="text-muted text-uppercase mt-4">Brands</h6>
-      <div class="form-check" *ngFor="let i of repeat">
+      <div class="form-check" *ngFor="let i of products">
         <input class="form-check-input" type="checkbox" name="brand" value="apple">
         <label class="form-check-label" for="apple">
           Apple
