--- a/src/styles.css
+++ b/src/styles.css
@@ -62,3 +62,9 @@ body {
 .w-fit {
 	width: fit-content;
 }
+
+.one-liner {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+  }
