--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,27 @@
 <div class="col-12 col-md-6 d-flex justify-content-around login-container">
     <div class="card border-0 shadow-sm login-card my-auto h-fit">
-        <form class="card-body mb-0">
-        <h4 class="card-subtitle mb-4 text-muted">Login</h4>
-        <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password</label>
-    </div>
-    <div class="form-floating">
-        <button class="btn btn-primary mt-3">Login</button>
-    </div>
+        <form #loginForm="ngForm" (ngSubmit)="loginHandler(loginForm.value)" class="card-body mb-0">
+            <h4 class="card-subtitle mb-4 text-muted">Login</h4>
+            <div class="form-floating mb-3">
+                <input #email="ngModel" type="email" class="form-control" id="floatingInput"
+                    placeholder="name@example.com" name="email" email required ngModel>
+                <label for="floatingInput">Email address</label>
+                <span *ngIf="email.errors?.['required'] && email.dirty" class="error-message">Email is a required
+                    field</span>
+                <span *ngIf="email.errors?.['email'] && email.dirty" class="error-message">Email is invalid!</span>
+                <span *ngIf="email.valid && email.dirty" class="success-message">All looks good!</span>
+            </div>
+            <div class="form-floating">
+                <input #password="ngModel" type="password" class="form-control" id="floatingPassword"
+                    placeholder="Password" name="password" minlength="4" required ngModel>
+                <label for="floatingPassword">Password</label>
+                <span *ngIf="password.errors && password.dirty" class="error-message">Password is a required
+                    field</span>
+                <span *ngIf="password.valid && password.dirty" class="success-message">All looks good!</span>
+            </div>
+            <div class="form-floating">
+                <button type="submit" class="btn btn-primary mt-3">Login</button>
+            </div>
         </form>
     </div>
 </div>
-
