--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,17 +1,17 @@
 <div class="container-fluid px-4">
     <div class="row">
         <div class="col-12 col-lg-7">
-            <div class="row shadow-sm mb-2" *ngFor="let i of repeat">
+            <div class="row shadow-sm mb-2" *ngFor="let item of cartItems">
                 <div class="col-12 col-sm-4 text-center"><img src="../../assets/images/mac1.jpg" alt="" height="220px"></div>
                 <div class="col py-3 position-relative">
-                    <h6 class="text-muted mb-0">Apple</h6>
-                    <h5 class="mb-0">Macbook Air</h5>
-                    <p class="mb-2 opacity-75">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, minus.
+                    <h6 class="text-muted mb-0">{{item.product.brand}}</h6>
+                    <h5 class="mb-0">{{item.product.title}}</h5>
+                    <p class="mb-2 opacity-75 one-liner">Lorem ipsum dolor sit amet.
                     </p>
-                    <h5 class="d-inline-block me-2 fw-normal">₹1,50,000.00</h5> 
+                    <h5 class="d-inline-block me-2 fw-normal">{{item.product.price | currency: 'INR'}}</h5> 
                     <small>
-                        <span class="text-muted text-decoration-line-through">₹1,67,000.00</span> 
-                        <span class="text-success ms-1">(15% Off)</span>
+                        <span class="text-muted text-decoration-line-through">{{getMrp(item.product.price, item.product.discount)| currency:'INR'}}</span> 
+                        <span class="text-success ms-1">({{item.product.discount}}% Off)</span>
                     </small>
                     <div class="input-group mb-3">
                         <button class="btn btn-outline-red border-end-0 px-2">
