--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <a class="text-muted my-auto me-4 position-relative" routerLink="/cart">
               <i class="material-icons fs-2">shopping_cart</i>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill p-1 bg-red">
-                99
+                {{cartQuantity}}
               </span>
           </a>
           
