--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -2,3 +2,11 @@
     transform: scale(1.02);
     /* shadow: */
 }
+
+.img-thumbnail {
+    aspect-ratio: 1;
+}
+
+.img-div {
+    aspect-ratio: 1;    
+}
