--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,38 +1,55 @@
 <div class="container-fluid px-4">
     <div class="row">
         <div class="col-12 col-lg-7">
+            <div class="row justify-content-between align-items-center">
+                <div class="text-muted w-fit">
+                    <h3 class="d-inline-block">Cart</h3>
+                    <h5 class="d-inline-block ms-2">({{totalQuantity}} items)</h5>
+                </div>
+                <div class="w-fit px-0">
+                    <button class="btn btn-sm btn-outline-red border-0" data-bs-toggle="modal" data-bs-target="#confirmRemoveAllModal">Reset Cart</button>
+                </div>
+            </div>
             <div class="row shadow-sm mb-2" *ngFor="let item of cartItems">
-                <div class="col-12 col-sm-4 text-center"><img src="../../assets/images/mac1.jpg" alt="" height="220px" routerLink="../product/{{item.product.id}}"></div>
+                <div class="col-12 col-sm-4 text-center"><img class="img-aspect p-1 rounded-2"
+                        src="{{item.product.thumbnail}}" alt="" height="220px"
+                        routerLink="../product/{{item.product.id}}"></div>
                 <div class="col py-3 position-relative">
                     <h6 class="text-muted mb-0" routerLink="../product/{{item.product.id}}">{{item.product.brand}}</h6>
                     <h5 class="mb-0" routerLink="../product/{{item.product.id}}">{{item.product.title}}</h5>
                     <p class="mb-2 opacity-75 one-liner">Lorem ipsum dolor sit amet.
                     </p>
-                    <h5 class="d-inline-block me-2 fw-normal">{{item.product.price | currency: 'INR'}}</h5>     
+                    <h5 class="d-inline-block me-2 fw-normal">{{item.product.price | currency: 'INR'}}</h5>
                     <small>
-                        <span class="text-muted text-decoration-line-through">{{getMrp(item.product.price, item.product.discount)| currency:'INR'}}</span> 
+                        <span class="text-muted text-decoration-line-through">{{getMrp(item.product.price,
+                            item.product.discount)| currency:'INR'}}</span>
                         <span class="text-success ms-1">({{item.product.discount}}% Off)</span>
                     </small>
                     <div class="input-group mb-3">
-                        <button class="btn btn-outline-red border-end-0 px-2">
+                        <button class="btn btn-outline-red border-end-0 px-2"
+                            (click)="decreaseCartHandler(item.product.id)">
                             <span class="material-symbols-outlined">
                                 remove
                             </span>
                         </button>
                         <input type="text"
                             class="form-control w-3rem flex-grow-0 text-center text-red border-start-0 border-red border-end-0 no-border-on-focus"
-                            value="{{item.quantity}}" placeholder="" aria-label="Example text with button addon"
-                            aria-describedby="button-addon1">
-                        <button class="btn btn-outline-red border-start-0 px-2">
+                            (keyup)="updateCartHandler(item.product.id, $event)" value="{{item.quantity}}"
+                            placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <button class="btn btn-outline-red border-start-0 px-2"
+                            (click)="increaseCartHandler(item.product.id)">
                             <span class="material-symbols-outlined">
                                 add
                             </span>
                         </button>
                     </div>
-                    <h5 class="mb-0"><span class="fw-normal">Subtotal:</span> {{item.product.price * item.quantity | currency: 'INR'}}</h5>
-                    
-                    <button class="btn btn-outline-red position-absolute top-0 end-0 border-0 p-1 m-2"><span class="material-symbols-outlined">
-                        delete
+                    <h5 class="mb-0"><span class="fw-normal">Subtotal:</span> {{item.product.price * item.quantity |
+                        currency: 'INR'}}</h5>
+
+                    <button class="btn btn-outline-red position-absolute top-0 end-0 border-0 p-1 m-2"
+                        data-bs-toggle="modal" data-bs-target="#confirmRemoveModal"
+                        (click)="setRemovingProduct(item.product)"><span class="material-symbols-outlined">
+                            delete
                         </span></button>
                 </div>
             </div>
@@ -52,7 +69,8 @@
                 <div class="d-flex justify-content-between">
                     <div [ngClass]="summary.deliveryCharges == 0 ? 'text-success':''">Delivery Charges</div>
                     <div *ngIf="summary.deliveryCharges != 0">{{summary.deliveryCharges | currency:'INR'}}</div>
-                    <div *ngIf="summary.deliveryCharges == 0" class="text-success">FREE <span class="text-decoration-line-through">₹49.00</span></div>
+                    <div *ngIf="summary.deliveryCharges == 0" class="text-success">FREE <span
+                            class="text-decoration-line-through">₹49.00</span></div>
                 </div>
                 <hr>
                 <div class="d-flex justify-content-between">
@@ -60,8 +78,48 @@
                     <div class="h5">{{summary.amount | currency:'INR'}}</div>
                 </div>
                 <hr>
-                <p [ngClass]="'text-success '+ ((summary.savings > 0) ? '':'d-none')">You'll save <strong>{{summary.savings | currency:'INR'}}</strong> on this order.</p>
+                <p [ngClass]="'text-success '+ ((summary.savings > 0) ? '':'d-none')">You'll save
+                    <strong>{{summary.savings | currency:'INR'}}</strong> on this order.</p>
                 <button class="btn btn-red w-100 text-center">Place Order</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Remove Confirmation</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to remove <strong>{{removingProduct ? removingProduct.title : ''}}</strong>
+                    from the cart?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                    (click)="removeFromCartHandler()">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="confirmRemoveAllModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Clear Cart Confirmation</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Your cart will be cleared! Are you sure?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                    (click)="clearCartHandler()">Confirm</button>
             </div>
         </div>
     </div>
